# docs/swagger/swagger.yaml
@@ -5,8 +5,230 @@ paths:
       operationId: HealthController_getHealth
       parameters: []
       responses:
-        '200':
+        default:
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthResponseDto'
+      tags:
+        - Health
+  /lists:
+    get:
+      operationId: ListsController_getLists
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ListResponseDto'
+      tags: &ref_0
+        - Lists
+    post:
+      operationId: ListsController_createList
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ListRequestDto'
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListResponseDto'
+      tags: *ref_0
+  /lists/{id}:
+    get:
+      operationId: ListsController_getList
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListResponseDto'
+      tags: *ref_0
+    patch:
+      operationId: ListsController_updateList
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ListRequestDto'
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListResponseDto'
+      tags: *ref_0
+    delete:
+      operationId: ListsController_deleteList
+      parameters: []
+      responses:
+        '204':
+          description: ''
+      tags: *ref_0
+  /tasks:
+    get:
+      operationId: TasksController_getTasks
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TaskResponseDto'
+      tags: &ref_1
+        - Tasks
+    post:
+      operationId: TasksController_createTask
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskResponseDto'
+      tags: *ref_1
+  /tasks/{id}:
+    get:
+      operationId: TasksController_getTask
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskResponseDto'
+      tags: *ref_1
+    patch:
+      operationId: TasksController_updateTask
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskResponseDto'
+      tags: *ref_1
+    delete:
+      operationId: TasksController_deleteTask
+      parameters: []
+      responses:
+        '204':
+          description: ''
+      tags: *ref_1
+  /user/sign-up:
+    post:
+      operationId: UsersController_signUp
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequestDto'
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponseDto'
+      tags: &ref_2
+        - User
+  /user/sign-in:
+    post:
+      operationId: UsersController_signIn
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequestDto'
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponseDto'
+      tags: *ref_2
+  /user:
+    get:
+      operationId: UsersController_getUser
+      parameters: []
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponseDto'
+      tags: *ref_2
+    delete:
+      operationId: UsersController_deleteUser
+      parameters: []
+      responses:
+        '204':
+          description: ''
+      tags: *ref_2
+  /user/username:
+    patch:
+      operationId: UsersController_updateUsername
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequestDto'
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponseDto'
+      tags: *ref_2
+  /user/password:
+    patch:
+      operationId: UsersController_updatePassword
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequestDto'
+      responses:
+        default:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponseDto'
+      tags: *ref_2
 info:
   title: Nest.js - API - Template
   description: Nest.js - API - Template
@@ -17,4 +239,80 @@ tags:
     description: ''
 servers: []
 components:
-  schemas: {}
+  schemas:
+    HealthResponseDto:
+      type: object
+      properties:
+        status:
+          type: string
+      required:
+        - status
+    ListResponseDto:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        primary:
+          type: boolean
+        userId:
+          type: string
+      required:
+        - id
+        - title
+        - primary
+        - userId
+    ListRequestDto:
+      type: object
+      properties:
+        title:
+          type: string
+      required:
+        - title
+    TaskResponseDto:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        description:
+          type: string
+        completed:
+          type: boolean
+        listId:
+          type: string
+      required:
+        - id
+        - title
+        - description
+        - completed
+        - listId
+    UserRequestDto:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      required:
+        - username
+        - password
+    UserResponseDto:
+      type: object
+      properties:
+        id:
+          type: string
+        username:
+          type: string
+      required:
+        - id
+        - username
+    TokenResponseDto:
+      type: object
+      properties:
+        token:
+          type: string
+      required:
+        - token
