# src/modules/tasks/tasks.dto.ts
@@ -1,0 +1,32 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class TaskResponseDto {
+  @ApiProperty()
+  id: string;
+
+  @ApiProperty()
+  title: string;
+
+  @ApiProperty()
+  description: string;
+
+  @ApiProperty()
+  completed: boolean;
+
+  @ApiProperty()
+  listId: string;
+}
+
+export class TaskRequestDto {
+  @ApiProperty()
+  title: string;
+
+  @ApiProperty()
+  description: string;
+
+  @ApiProperty()
+  completed: boolean;
+
+  @ApiProperty()
+  listId: string;
+}
